# old-tree-sitter-sage

./: Cargo.toml  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
src/: grammar.json  node-types.json  parser.c  scanner.c
