[package]
name = "tree-sitter-sage"
description = "Python grammar for tree-sitter"
version = "0.0.1"
authors = [
  "Håvard Damm-Johnsen <havard-dj@hotmail.com>",
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "python"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/havarddj/tree-sitter-sage"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.1.15"

[dev-dependencies]
tree-sitter = "0.23"
